--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ header {
   width: 30px;
   height: 30px;
   opacity: 0;
+  cursor: pointer;
 }
 /* show menu on click */
 .menu-wrap .toggler:checked ~ .menu {
@@ -65,12 +66,6 @@ header {
   position: fixed;
   top: 0;
   left: 100vw;
-  /* width: 100%;
-  height: 100%;
-  visibility: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center; */
 }
 .menu-wrap .menu > div {
   background: var(--main__color);
@@ -104,7 +99,6 @@ header {
   cursor: pointer;
   transition: all 0.5s ease-in-out;
   z-index: 1;
-  /* border: 3px solid #fff; */
 }
 /* burger menu icon middle line */
 .menu-btn__burger {
@@ -143,9 +137,6 @@ header {
   transform: rotate(-45deg) translate(35px, 35px);
 }
 /* DESKTOP NAVIGATION */
-/* .desktop__navigation {
-  display: none;
-} */
 nav ul {
   display: flex;
   font-family: var(--secundary__font);
@@ -155,6 +146,13 @@ nav ul {
 nav ul li {
   margin-left: 4.4em;
   list-style-type: none;
+  
+}
+nav ul li a {
+  transition: color .1s ease-in-out;
+}
+nav ul li a:hover {
+  color: #7c7c7c;
 }
 .current__page {
   font-weight: 700;
